--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="container" >
   <h1 class="title">Instagram Personality Analyzer</h1>
-  
   <form (submit)="onSubmit()" class="form">
     <div class="input-group">
       <input 
@@ -21,16 +20,14 @@
     <p>Analyzing profile... This may take a moment while data is scraped and images are downloaded.</p>
   </div>
 
-  <div *ngIf="data" class="results">
-    <!-- Profile Information Section -->
+  <div *ngIf="data.profile_info" class="results">
     <section class="section" *ngIf="data.profile_info">
       <h2>Profile Information</h2>
       <div class="profile-info">
         <div class="profile-header">
           <div class="profile-image-container">
             <img 
-              src="https://instagram.ftun15-1.fna.fbcdn.net/v/t51.2885-19/290490306_5546497298717243_3340762957370409520_n.jpg?stp=dst-jpg_s150x150_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6InByb2ZpbGVfcGljLmRqYW5nby4xMDgwLmMyIn0&_nc_ht=instagram.ftun15-1.fna.fbcdn.net&_nc_cat=111&_nc_oc=Q6cZ2QEKyIK9RQWWJrayQGmy-xDV7KzoHuUS0UmhrKz72dEjiN67usuVRcpzuibu8cw_njg&_nc_ohc=qsY0Xbht-44Q7kNvwEOfmvt&_nc_gid=odetniMtdg0xH6U2U6v3Ow&edm=AONqaaQBAAAA&ccb=7-5&oh=00_AfmlLsy4TFXEf8wplFTg46A_NSPzRLPCoyfVUmSPgS9JsQ&oe=6951E7A4&_nc_sid=4e3341"
-
+              [src]="data.profile_info.profile_pic_url"
               alt="Profile Picture" 
               class="profile-image"
             />
@@ -79,7 +76,6 @@
       </div>
     </section>
 
-    <!-- Personality Traits Section -->
     <section class="section">
       <h2>Personality Traits</h2>
       <div class="traits-grid">
@@ -93,7 +89,6 @@
       </div>
     </section>
 
-    <!-- Analysis Summary Section -->
     <section class="section" style="color: white;">
       <h2>Analysis Summary</h2>
       <div style="display: flex; justify-content: space-around;">
@@ -107,7 +102,6 @@
       </div>
     </section>
 
-    <!-- Sample Posts Section -->
     <section class="section">
       <h2>Sample Posts</h2>
       <div class="posts-grid">
